--- a/ycash-zcash-fork.html
+++ b/ycash-zcash-fork.html
@@ -108,12 +108,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="item-page-image-template">
 
                 <div class="item-page-blog-image">
-                  <img src="css/images/articles/ycash-in-atomic.png" alt="YCash in Atomic Wallet">
+                 <img src="css/images/articles/ycash-wallet.png" alt="YCash Wallet">
                 </div>
               </div>
               <p>The YCash is a new cryptocurrency made on the ZCash software. The YCash fork happened at block height 570,000 of the ZCash blockchain, which means that everyone in control of Zcash private keys as of block height 570,000 are able to use those private keys to access the same amount of Ycash.</p>
-              <h3>How to Claim YCash in Atomic Wallet</h3>
-              <ul>As Atomic Wallet user, you can use the following process:
+              <h3>How to Claim YCash in Atomic Wallet:</h3>
+              <ul>
                 <li>Open Settings in your Atomic Wallet</li>
                 <li>Choose Private Keys</li>
                 <li>Enter your password</li>
@@ -124,7 +124,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <a href="https://atomicwallet.io" target="_blank">
             <div class="item-page-image-template">
                 <div class="item-page-blog-image">
-                    <img src="css/images/articles/ycash-wallet.png" alt="YCash Wallet">
+                    <img src="css/images/articles/claim-ycash.png" alt="YCash Wallet">
                 </div></a>
               </div>
               <h3>Ycash Total Supply</h3>
