Links no-follow

--- a/litecoin-price-prediction.html
+++ b/litecoin-price-prediction.html
@@ -149,7 +149,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                  <p>Exchange Litecoin (LTC) at the best available rate with no registration and zero fees.</p>
                <div class="item-page-image-template">
                 <div class="item-page-blog-image">
-                  <a href="https://changenow.io/?link_id=d9466567d77e23" target="_blank">
+                  <a href="https://changenow.io/?link_id=d9466567d77e23" target="_blank" rel="nofollow">
                     <img src="css/images/exchange-litecoin.png" alt="" class="exchange-banner" style="">
                     </a>
                     </div>
