--- a/downloads.html
+++ b/downloads.html
@@ -120,8 +120,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <div class="item-page">
         <!--<img src="css/images/crypto-icon/BTC.svg" class="item-page-image">-->
         <div class="item-page-article">
-          <img src="css/images/bg-item-page-1.svg" alt="" class="item-page-bg item-page-bg-1">
-          <img src="css/images/bg-item-page-2.svg" alt="" class="item-page-bg item-page-bg-2">
+
 
 
 
@@ -129,8 +128,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <img src="">
           <div class="item-page-download">
 
-            <h3>Atomic Wallet</h3>
-            <h4 class="mobile-hide">Latest release 2.4.0 <br>Please note, in case of upgrade v1.39.1 wallet to the v2.4.0 version, <br> you should restore the wallet with 12-word seed backup.</h4>
+            <h3 class="">Latest Release 2.4.0</h3>
+            <h4 class="downloads-title mobile-hide">Please note, in case of upgrade v1.39.1 wallet to the v2.4.0 version, you should restore the wallet with 12-word seed backup.</h4>
             
     <!-- Subscribe Pop-up-->
 <script>window.jQuery || document.write('<scr' + 'ipt src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"><\/sc' + 'ript>')</script>
@@ -219,7 +218,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
         </div>
-            <div class="download-button-bottom mobile-hide">
+            <div class="download-button-bottom mobile-hide" style="padding-top: 10px;">
               <a href="https://atomicwallet.io/download/hash_sum.pdf" target="_blank" class="button hash-torrent hvr-float">Check Hash Sum</a>&nbsp;&nbsp;&nbsp;&nbsp;
 
               <!--<a href="magnet:?xt=urn:btih:8F40C43C1602510238281D707D6C29B674B61C95&dn=Atomic" class="button hash-torrent" target="_blank">Torrent Download</a>-->
@@ -227,16 +226,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </div>
  <div class="downloads-container">
             
-            <h3>Update History</h3>
-                <div class="item-page-image-template">
+           <h3>Update History</h3>
+                <!--  <div class="item-page-image-template">
                 <div class="item-page-blog-image">
                     <img src="css/images/main-page-twitter.png"  class="downloads-page-image" alt="">
                     </div>
                 </div>
                 <div class="releases no-background">
             <p class="f-light">With every single new release, Atomic Wallet becomes more robust, more universal, more friendly. <br>There is always room for improvements, so
-              we noted your suggestions carefully in order to take another step towards perfection.</p></div>
-
+              we noted your suggestions carefully in order to take another step towards perfection.</p></div> -->
 
          <div class="releases">
             <h4>Desktop Release 2.4.0</h4>
