--- a/downloads.html
+++ b/downloads.html
@@ -248,12 +248,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
            <h4>New features:</h4>
           </div>
           <ol>
-            <li>YCash added (to get it in your balance – <a href="https://atomicwallet.io/ycash-zcash-fork">claim YCash in private keys</a>).</li>
-            <li>Wink/TRC20 token added.</li>
-            <li>Fixed USDT ERC20, BSV exchanges.</li>
-            <li>Added notification on lack of <a href="https://atomicwallet.io/tron-wallet">TRX</a> for sending BTT on different address/exchange.</li>
-            <li>Improved wallet performance for ETH/ERC20 balance displaying.</li>
-
+            <li>YCash added <a href="https://atomicwallet.io/ycash-zcash-fork">Read here, how to claim.</a>).</li>
+            <li>Wink-TRC20 token added.</li>
+            <li>Exchange fixed for USDT-ERC20, BSV, BTT and QTUM assets.</li>
+            <li>QTUM balance and sending issues fixed.</li>
           </ol>
           <div class="footer-new-left">
            <h4>Bug fixes:</h4>
