VIDT fix on Assets page

--- a/downloads.html
+++ b/downloads.html
@@ -127,10 +127,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
           <img src="">
           <div class="item-page-download">
-
-
-            <h3>Atomic Wallet</h3>
-            <h4 class="mobile-hide">Latest release 2.5.0 <br>Please note, in case of upgrade v1.39.1 wallet to the v2.5.0 version, <br> you should restore the wallet with 12-word seed backup.</h4>
+            <h3>Latest Release 2.5.0</h3>
+            <h4 class="mobile-hide">Please note, in case of upgrade v1.39.1 wallet to the v2.5.0 version, you should restore the wallet with 12-word seed backup.</h4>
 
             
     <!-- Subscribe Pop-up-->
