--- a/verge-wallet.html
+++ b/verge-wallet.html
@@ -699,13 +699,13 @@ $(window).trigger('resize')
                     <div class="partners-list">
 
 
-                        <a class="hvr-grow" href="https://changelly.com/?ref_id=c2062aad8a83" taget="_blank" rel="nofollow"><img src="css/images/partner-changelly.svg" alt=""></a>
-            <a class="hvr-grow" href="https://shapeshift.io" taget="_blank" rel="nofollow"><img src="css/images/partner-ShapeShift.svg" alt=""></a>
-            <a class="hvr-grow" href="https://changenow.io?link_id=af2fc093c6dc40" target="_blank" rel="nofollow"><img src="css/images/change-now.svg" alt=""></a>
-            <a class="hvr-grow" href="https://www.simplex.com/" target="_blank" rel="nofollow"><img src="css/images/partner-simplex.png" alt=""></a>
-            <a class="hvr-grow" href="https://bnktothefuture.com/" target="_blank" rel="nofollow"><img src="css/images/partners-bnktothefuture.png" alt=""></a>
-            <a class="hvr-grow" href="https://fenbushi.digital" target="_blank"rel="nofollow"><img src="css/images/partner-fenbushi.png" alt=""></a>
-            <a class="hvr-grow" href="https://coinmarketcap.com/" target="_blank" rel="nofollow"><img src="css/images/partner-coinmarketcap.png" alt=""></a>
+                        <a class="hvr-grow" ><img src="css/images/partner-changelly.svg" alt=""></a>
+            <a class="hvr-grow" ><img src="css/images/partner-ShapeShift.svg" alt=""></a>
+            <a class="hvr-grow" ><img src="css/images/change-now.svg" alt=""></a>
+            <a class="hvr-grow" ><img src="css/images/partner-simplex.png" alt=""></a>
+            <a class="hvr-grow" ><img src="css/images/partners-bnktothefuture.png" alt=""></a>
+            <a class="hvr-grow" ><img src="css/images/partner-fenbushi.png" alt=""></a>
+            <a class="hvr-grow" ><img src="css/images/partner-coinmarketcap.png" alt=""></a>
 
                     </div>
                 </div>
