Wink Wallet UPD

--- a/wink-wallet.html
+++ b/wink-wallet.html
@@ -9,7 +9,7 @@
     <meta name="twitter:creator" content="@atomicwallet">
     <meta name="twitter:title" content="Download WINk (WIN) Wallet">
     <meta name="twitter:description" content="Read about WINk blockchain and manage WIN + other 300 coins and tokens in Atomic Wallet interface. ">
-    <!-- <meta name="twitter:image" content="https://atomicwallet.io/css/images/articles/neo-wallet-twitter.png"> -->
+    <meta name="twitter:image" content="https://atomicwallet.io/css/images/articles/tron_wink_wallet_twitter.png">
         <title>WINk (WIN) Wallet </title>
         <meta name="description" content="Download fast and secure WINk (WIN) wallet with built-in cryptocurrency exchange. Manage and swap your cryptos in one secure interface. ">
     <link rel="stylesheet" href="css/main.css">
