Script on voting page updated

--- a/voting.html
+++ b/voting.html
@@ -145,12 +145,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </button>  
   <div id=countdown-wrap>
   <div id="glass">
-    <div id="progress-cnd" style="">
+    <div id="progress-freldo" style="">
     </div>
   </div>
   
   <div class="goal-stat">
-        <span class="goal-number" id="token-balance-cnd"></span>
+        <span class="goal-number" id="token-balance-freldo"></span>
   </div>
     <div id="goals-wrap">
     <div id="goal" class="goal-number">5000 AWC</div>
