--- a/blog.html
+++ b/blog.html
@@ -56,39 +56,39 @@
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 
-<div class="header">
-  <a href="https://atomicwallet.io" class="header__logo">
-      <img class="website-logo" src="css/images/icons/atomic-website-logo.svg">
-  </a>
+ <div class="header">
+    <a href="https://atomicwallet.io" class="header__logo">
+        <img class="website-logo" src="css/images/icons/atomic-website-logo.svg">
+    </a>
 
 <nav class="header__navigation">
-  <ul>
-      <li><a href="https://atomicwallet.io/">Wallet</a></li>
-      <li><a href="https://atomicwallet.io/buy-bitcoin">Buy bitcoin</a></li>
-      <li><a href="https://atomicwallet.io/cryptocurrency-prices">Assets</a></li>
-      <li><a href="https://atomicwallet.io/membership">Membership</a></li>
-      <li><a href="https://support.atomicwallet.io/" target="_blank">Support</a></li>
-  </ul>
+    <ul>
+        <li><a href="https://atomicwallet.io/bitcoin-wallet">Bitcoin</a></li>
+        <li><a href="https://atomicwallet.io/buy-bitcoin">Buy Crypto</a></li>
+        <li><a href="https://atomicwallet.io/cryptocurrency-prices">Assets</a></li>
+        <li><a href="https://atomicwallet.io/membership">Membership</a></li>
+        <li><a href="https://support.atomicwallet.io/" target="_blank">Support</a></li>
+    </ul>
 </nav>
 
 
 
 <nav class="header__navigation--mobile">
-      <ul>
-          <li><a href="https://atomicwallet.io/">Wallet</a></li>
-          <li><a href="https://atomicwallet.io/buy-bitcoin">Buy bitcoin</a></li>
-          <li><a href="https://atomicwallet.io/cryptocurrency-prices">Assets</a></li>
-          <li><a href="https://atomicwallet.io/membership">Membership</a></li>
-          <li><a href="https://support.atomicwallet.io/" target="_blank">Support</a></li>
-          <li><a href="https://atomicwallet.io/downloads"><div class="btn--download-menu">Download</div></a></li>
-      </ul>
-  </nav>
+        <ul>
+            <li><a href="https://atomicwallet.io/">Wallet</a></li>
+            <li><a href="https://atomicwallet.io/buy-bitcoin">Buy bitcoin</a></li>
+            <li><a href="https://atomicwallet.io/cryptocurrency-prices">Assets</a></li>
+            <li><a href="https://atomicwallet.io/membership">Membership</a></li>
+            <li><a href="https://support.atomicwallet.io/" target="_blank">Support</a></li>
+            <li><a href="https://atomicwallet.io/downloads"><div class="btn--download-menu">Download</div></a></li>
+        </ul>
+    </nav>
 
 <a href="https://atomicwallet.io/downloads"><div class="btn--download">Download</div></a>
 <a href="https://atomicwallet.io/downloads"class="btn--download-mobile_menu">Download</a>
 <div class="btn--mobile-menu"><i class="fa fa-bars"></i></div>
-      
-  </div>
+        
+    </div>
 
 
 
