Update wallets pics

--- a/binance-coin-wallet.html
+++ b/binance-coin-wallet.html
@@ -9,7 +9,7 @@
   <meta name="twitter:creator" content="@atomicwallet">
   <meta name="twitter:title" content="Binance Coin (BNB) Wallet">
   <meta name="twitter:description" content="BNB provides many options in the Binance ecosystem, including bidding, exchange, listing and any other fees. Although the Binance fee payment is the main option of BNB, it also may be used to invest in some ICOs.">
-  <meta name="twitter:image" content="https://atomicwallet.io/css/images/articles/Binance%20(BNB)%20Coin%20Wallet.png">
+  <meta name="twitter:image" content="https://atomicwallet.io/css/images/articles/binance_coin_wallet.png">
   <title>Binance Coin (BNB) Wallet </title>
   <meta name="description" content="Download Binance Coin wallet with multi asset support and built-in cryptocurrency exchange.">
   <link rel="stylesheet" href="css/main.css">
@@ -152,7 +152,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                         </h1>
                         <div class="mobile-hide">
-                    <a href="#download"><img src="css/images/articles/binance-coin-wallet.png"  alt class="main-notebook main-notebook-wallet" data-aos="fade-left" data-aos-duration="800" style="margin-top: 7px;"> </a>
+                    <a href="#download"><img src="css/images/articles/binance_coin_wallet.png"  alt class="main-notebook main-notebook-wallet" data-aos="fade-left" data-aos-duration="800" style="margin-top: 7px;"> </a>
                     </div>
                     <div class="mobile-only">
                     <a href="#download"><img src="css/images/mobile-interface-mobile.png"  alt class="mobile-interface-download only-mobile" data-aos="fade-left" data-aos-duration="800" style="margin-top: 7px;"> </a>
@@ -716,7 +716,7 @@ $(window).trigger('resize')
             <h2 id="wallet">Binance Coin (BNB) Wallet</h2>
                 <div class="item-page-image-template">
                 <div class="item-page-blog-image">
-                    <a href="#download"><img style="width: 70%;" src="css/images/mainnotebook.png" alt="Download multi-asset cryptocurrency wallet."></a>
+                    <a href="#download"><img style="width: 70%;" src="css/images/articles/binance_coin_wallet.png" alt="Download multi-asset cryptocurrency wallet."></a>
                 </div>
             </div>
             <p>If you are interested to hold BNB as an investment, you should store it from the exchange to your own wallet. Pay your attention that custodial wallet it's almost the same as the exchange. So it will be better to have a <a href="https://atomicwallet.io/custodial-non-custodial-wallets-comparison" title="What is the difference between custodial and non-custodial wallets?">cold or a non-custodial wallet</a>.</p>
