--- a/bitcoin-cash-wallet.html
+++ b/bitcoin-cash-wallet.html
@@ -9,7 +9,7 @@
     <meta name="twitter:creator" content="@atomicwallet">
     <meta name="twitter:title" content="Bitcoin Cash (BCH) Wallet">
     <meta name="twitter:description" content="Download secure Bitcoin Cash Wallet with built-in cryptocurrency exchange, buy crypto and Atomic Swaps.">
-    <meta name="twitter:image" content="https://atomicwallet.io/css/images/mainnotebook.png">
+    <meta name="twitter:image" content="https://atomicwallet.io/css/images/articles/bitcoin_cash_wallet.png">
     <title>Bitcoin Cash (BCH) Wallet | Atomic Wallet </title>
     <meta name="description" content="Download secure Bitcoin Cash Wallet with built-in cryptocurrency exchange, buy crypto and Atomic Swaps.">
     <link rel="stylesheet" href="css/main.css">
@@ -156,7 +156,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                         </h1>
                         <div class="mobile-hide">
-                    <a href="#download"><img src="css/images/mainnotebook.png"  alt class="main-notebook main-notebook-wallet" data-aos="fade-left" data-aos-duration="800" style="margin-top: 7px;"> </a>
+                    <a href="#download"><img src="css/images/articles/bitcoin_cash_wallet.png"  alt class="main-notebook main-notebook-wallet" data-aos="fade-left" data-aos-duration="800" style="margin-top: 7px;"> </a>
                     </div>
                     <div class="mobile-only">
                     <a href="#download"><img src="css/images/mobile-interface-mobile.png"  alt class="mobile-interface-download only-mobile" data-aos="fade-left" data-aos-duration="800" style="margin-top: 7px;"> </a>
