--- a/cardano-wallet.html
+++ b/cardano-wallet.html
@@ -9,7 +9,7 @@
     <meta name="twitter:creator" content="@atomicwallet">
     <meta name="twitter:title" content="Welcome ADA in Atomic Wallet!">
     <meta name="twitter:description" content="Read our guide about Cardano and download Atomic Wallet with ADA!">
-    <meta name="twitter:image" content="https://atomicwallet.io/css/images/articles/Cardano(ADA)_Wallet.png">
+    <meta name="twitter:image" content="https://atomicwallet.io/css/images/articles/cardano_ada_wallet.png">
     <title>Cardano (ADA) Wallet</title>
     <meta name="description" content="Download convenient Cardano (ADA) cryptocurrency wallet with built-in cryptocurrency exchange. No KYC and AML.">
     <link rel="stylesheet" href="css/main.css">
@@ -151,7 +151,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                         </h1>
                         <div class="mobile-hide">
-                    <a href="#download"><img src="css/images/articles/cardano-wallet.png"  alt class="main-notebook main-notebook-wallet" data-aos="fade-left" data-aos-duration="800" style="margin-top: 7px;"> </a>
+                    <a href="#download"><img src="css/images/articles/cardano_ada_wallet.png"  alt class="main-notebook main-notebook-wallet" data-aos="fade-left" data-aos-duration="800" style="margin-top: 7px;"> </a>
                   </div>
                   <div class="mobile-only">
                     <a href="#download"><img src="css/images/mobile-interface-mobile.png"  alt class="mobile-interface-download only-mobile" data-aos="fade-left" data-aos-duration="800" style="margin-top: 7px;"> </a>
