--- a/ripple-wallet.html
+++ b/ripple-wallet.html
@@ -9,7 +9,7 @@
     <meta name="twitter:creator" content="@atomicwallet">
     <meta name="twitter:title" content="Download Ripple Wallet with unique XRP address">
     <meta name="twitter:description" content="Read about Ripple blockchain and learn about 20 XRP as an unspendable balance. ">
-    <meta name="twitter:image" content="https://atomicwallet.io/css/images/articles/XRP.png">
+    <meta name="twitter:image" content="https://atomicwallet.io/css/images/articles/ripple_xrp_wallet.png">
     <title>Ripple (XRP) Wallet </title>
     <meta name="description" content="Download fast and secure Ripple (XRP) wallet with built-in cryptocurrency exchange. Most top assets supported. Buy Ripple right in the wallet interface.">
     <link rel="stylesheet" href="css/main.css">
@@ -151,7 +151,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                         </h1>
                         <div class="mobile-hide">
-                    <a href="#download"><img src="css/images/mainnotebook.png"  alt class="main-notebook main-notebook-wallet" data-aos="fade-left" data-aos-duration="800" style="margin-top: 7px;"> </a>
+                    <a href="#download"><img src="css/images/articles/ripple_xrp_wallet.png"  alt class="main-notebook main-notebook-wallet" data-aos="fade-left" data-aos-duration="800" style="margin-top: 7px;"> </a>
                     </div>
                     <div class="mobile-only">
                     <a href="#download"><img src="css/images/mobile-interface-mobile.png"  alt class="mobile-interface-download only-mobile" data-aos="fade-left" data-aos-duration="800" style="margin-top: 7px;"> </a>
