--- a/dash-wallet.html
+++ b/dash-wallet.html
@@ -9,7 +9,7 @@
     <meta name="twitter:creator" content="@atomicwallet">
     <meta name="twitter:title" content="DASH (DASH) Cryptocurrency Wallet">
     <meta name="twitter:description" content="Read why DASH is unique, Where to store DASH and manage DASH">
-    <meta name="twitter:image" content="https://atomicwallet.io/css/images/articles/DASH.png">
+    <meta name="twitter:image" content="https://atomicwallet.io/css/images/articles/dash_wallet.png">
     <title>DASH Wallet</title>
     <meta name="description" content="Download secure DASH Wallet with built-in Atomic Swap and cryptocurrency exchange.">
     <link rel="stylesheet" href="css/main.css">
@@ -153,7 +153,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                         </h1>
                         <div class="mobile-hide">
-                    <a href="#download"><img src="css/images/mainnotebook.png"  alt class="main-notebook main-notebook-wallet" data-aos="fade-left" data-aos-duration="800" style="margin-top: 7px;"> </a>
+                    <a href="#download"><img src="css/images/articles/dash_wallet.png"  alt class="main-notebook main-notebook-wallet" data-aos="fade-left" data-aos-duration="800" style="margin-top: 7px;"> </a>
                     </div>
                     <div class="mobile-only">
                     <a href="#download"><img src="css/images/mobile-interface-mobile.png"  alt class="mobile-interface-download only-mobile" data-aos="fade-left" data-aos-duration="800" style="margin-top: 7px;"> </a>
