--- a/digibyte-wallet.html
+++ b/digibyte-wallet.html
@@ -9,7 +9,7 @@
   <meta name="twitter:creator" content="@atomicwallet">
   <meta name="twitter:title" content="Digibyte (DGB) Wallet">
   <meta name="twitter:description" content="Download new multi-asset wallet that supports most of the blockchains including DGB, BTC, ETH, XRP and more!">
-  <meta name="twitter:image" content="https://atomicwallet.io/css/images/articles/Digibyte-DGB-Wallet.png">
+  <meta name="twitter:image" content="https://atomicwallet.io/css/images/articles/digibyte_wallet.png">
   <title>Digibyte (DGB) Wallet </title>
   <link rel="stylesheet" href="css/main.css">
 <link rel="stylesheet" href="css/header.css">
@@ -152,7 +152,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                         </h1>
                         <div class="mobile-hide">
-                    <a href="#download"><img src="css/images/mainnotebook.png"  alt class="main-notebook main-notebook-wallet" data-aos="fade-left" data-aos-duration="800" style="margin-top: 7px;"> </a>
+                    <a href="#download"><img src="css/images/articles/digibyte_wallet.png"  alt class="main-notebook main-notebook-wallet" data-aos="fade-left" data-aos-duration="800" style="margin-top: 7px;"> </a>
                     </div>
                     <div class="mobile-only">
                     <a href="#download"><img src="css/images/mobile-interface-mobile.png"  alt class="mobile-interface-download only-mobile" data-aos="fade-left" data-aos-duration="800" style="margin-top: 7px;"> </a>
