--- a/litecoin-wallet.html
+++ b/litecoin-wallet.html
@@ -6,7 +6,7 @@
   <meta name="twitter:creator" content="@atomicwallet">
   <meta name="twitter:title" content="Download Litecoin wallet with buy-crypto function!">
   <meta name="twitter:description" content="Read about Litecoin blockchain, learn Where to comfortably store LTC and how to exchange it on other cryptocurrencies.">
-  <meta name="twitter:image" content="https://atomicwallet.io/css/images/mainnotebook.png">
+  <meta name="twitter:image" content="https://atomicwallet.io/css/images/articles/litecoin_wallet.png">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1"/>
       <meta charset="UTF-8">
@@ -153,7 +153,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                         </h1>
                         <div class="mobile-hide">
-                    <a href="#download"><img src="css/images/mainnotebook.png"  alt class="main-notebook main-notebook-wallet" data-aos="fade-left" data-aos-duration="800" style="margin-top: 7px;"> </a>
+                    <a href="#download"><img src="css/images/articles/litecoin_wallet.png"  alt class="main-notebook main-notebook-wallet" data-aos="fade-left" data-aos-duration="800" style="margin-top: 7px;"> </a>
                     </div>
                     <div class="mobile-only">
                     <a href="#download"><img src="css/images/mobile-interface-mobile.png"  alt class="mobile-interface-download only-mobile" data-aos="fade-left" data-aos-duration="800" style="margin-top: 7px;"> </a>
