--- a/airdrop.html
+++ b/airdrop.html
@@ -332,7 +332,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <p>For now, there’s no limitation for referrals number. However, we will check all the referrals for validity. If we see any suspicious activity, you will not get a reward.</p>
             <h3>Rewards</h3>
             <p>The rewards are paid  until the 15th day of the next month. (i.e. if you participated in April, your reward will be paid until May, 15).</p>
-            <p>Please note that Atomic Wallet reserves the right to reject your reward request in case of a cheat or other improper actions.</p>
+            <p>Please note that Atomic Wallet reserves the right to reject your reward request in case of cheating or other improper actions.</p>
             <p><b>If you have registered before 24.04.19 12 a.m. UTC:</b></p>
             <p>You will receive 10 AWC for registration + 5 AWC if you use promo code. For each referral sign-up, using your promo code, you will get extra 5 AWC.</p>
               <p>Max. amount of referrals - 10 people! <br>
@@ -344,7 +344,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <p>In order to receive airdrop you must hold at least 0.1 ETH / 50 AWC on your Atomic Wallet balance at the time of the snapshot. You will get the reward for referrals only if they meet the same rule.</p>
             <p>No limitation for referrals number. However, we will check all the referrals for validity. If we see any suspicious activity, you will not get reward!</p>
             <p><b>Support:</b></p>
-            <p>If you have any questions or suggests, contact us at <a href="mailto:airdrop@atomicwallet.io">airdrop@atomicwallet.io</a> </p>
+            <p>If you have any questions or suggestions, contact us at <a href="mailto:airdrop@atomicwallet.io">airdrop@atomicwallet.io</a> </p>
             </div>
           </div>
         </div>
