Market Cap article update

--- a/blog.html
+++ b/blog.html
@@ -100,6 +100,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="item-page-article blog-bg-color-none">
 
                       <div class="blog-div hvr-float">
+            <a href="https://atomicwallet.io/market-cap">
+            <div class="small-image-blog">
+              <img src="css/images/articles/cryptocurrency_market_cap_blog.png" alt="" class="blog-image-template">
+            </div>
+            <div class="blog-div-text">
+              <h4>What is Cryptocurrency Market Cap?</h4>
+            <p>Market capitalization relates to the complete market value of the stocks of a company in the intrinsic value of say, a US Dollar...</p></div>
+            </a>
+          </div>
+
+                      <div class="blog-div hvr-float">
             <a href="https://atomicwallet.io/blockchain-regulation">
             <div class="small-image-blog">
               <img src="css/images/articles/blockchain-regulation-blog.png" alt="" class="blog-image-template">
