--- a/wink-wallet.html
+++ b/wink-wallet.html
@@ -789,7 +789,7 @@ $(window).trigger('resize')
 
 
           <div class="item-page-download" id="download">
-              <div class="item-page-download-title">Download Ontology (ONT) Wallet</div>
+              <div class="item-page-download-title">Download WINk (WIN) Wallet</div>
                 <!-- Subscribe Pop-up-->
                 <script>window.jQuery || document.write('<scr' + 'ipt src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"><\/sc' + 'ript>')</script>
                 <script>window.$kol_jquery = window.jQuery</script>
