--- a/july-report.html
+++ b/july-report.html
@@ -4,13 +4,13 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@atomicwallet">
     <meta name="twitter:creator" content="@atomicwallet">
-    <meta name="twitter:title" content="Atomic Wallet Report: July 2019">
+    <meta name="twitter:title" content="Atomic Wallet Report: July">
     <meta name="twitter:description" content="Last month we made a few cool updates. Check it out here!"/>
     <meta name="twitter:image" content="https://atomicwallet.io/css/images/articles/atomic_wallet_report.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta charset="UTF-8">
-    <title>Atomic Wallet Report: July 2019 | Atomic Wallet</title>
+    <title>Atomic Wallet Report: July | Atomic Wallet</title>
     <meta name="description" content="Last month we made a few cool updates. Check it out here!">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="test/css/item-page.css">
@@ -104,7 +104,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     
             <div class="item-page-article ama-report">
     
-              <h1 style="margin-bottom: 10px;">Atomic Wallet Report: July 2019</h1>
+              <h1 style="margin-bottom: 10px;">Atomic Wallet Report: July</h1>
                            <div class="item-page-image-template">
 
                 <div class="item-page-blog-image">
