--- a/membership.html
+++ b/membership.html
@@ -4,14 +4,14 @@
      <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@atomicwallet">
     <meta name="twitter:creator" content="@atomicwallet">
-    <meta name="twitter:title" content="Join Atomic Wallet Membership Program!">
-    <meta name="twitter:description" content="Atomic invites you to join our membership program. All customers holding a minimum of 1.000 AWC will receive rewards for using a built-in exchange service. ">
+    <meta name="twitter:title" content="Join Atomic Wallet Membership Rewards!">
+    <meta name="twitter:description" content="Atomic invites you to join our membership rewards. All customers holding a minimum of 1.000 AWC will receive rewards for using a built-in exchange service. ">
     <meta name="twitter:image" content="https://atomicwallet.io/css/images/articles/atomic-cashback.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta charset="UTF-8">
-    <title>Atomic Wallet Membership Program | Atomic Wallet</title>
-    <meta name="description" content="Atomic invites you to join our membership program. All customers holding a minimum of 1.000 AWC will receive rewards for using a built-in exchange service.">
+    <title>Atomic Wallet Membership Rewards | Atomic Wallet</title>
+    <meta name="description" content="Atomic invites you to join our membership rewards. All customers holding a minimum of 1.000 AWC will receive rewards for using a built-in exchange service.">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/test-media.css">
