--- a/wink-tronbet-airdrop.html
+++ b/wink-tronbet-airdrop.html
@@ -166,7 +166,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="only-mobile" style="margin-top: 150px;"></div>
 
 <h3 class="f-bold" style="margin-top: 70px;">How to receive WIN Airdrop</h3>
-         <p>On August 28th, 2019, 00:00:00 (SGT), WINk will initiate its first airdrop of WINk (WIN) to TRON (TRX) holders. WINk will initiate its first airdrop of 10,989,000,000 WINk (WIN), corresponding to 1.1% of the total supply. All TRX addresses holding 100TRX + on their balances will receive airdrop.</p>
+         <p>On August 28th, 2019, 00:00:00 (SGT), WINk will initiate its first airdrop of WINk (WIN) to TRON (TRX) holders. WINk will initiate its first airdrop of 10,989,000,000 WINk (WIN), corresponding to 1.1% of the total supply. All TRX addresses holding at least 100TRX on their balances will receive WINk airdrop.</p>
          <p>We fully support WINk token in Atomic Wallet, where you can able to store, manage, exchange and buy 500+ crypto assets.</p>
 
          <ol>WINk (WIN) airdrop snapshot timeline:
