snipped message fix

--- a/wink-tronbet-airdrop.html
+++ b/wink-tronbet-airdrop.html
@@ -8,10 +8,10 @@
     <meta name="twitter:site" content="@atomicwallet">
     <meta name="twitter:creator" content="@atomicwallet">
     <meta name="twitter:title" content="WINk-TRONbet (WIN) Airdrop">
-    <meta name="twitter:description" content="Read about WINk blockchain and receive WIN airdrop and manage 300+ coins and tokens in Atomic Wallet interface.">
+    <meta name="twitter:description" content="Get WINk airdrop in Atomic Wallet, learn more about TRONbet and manage 500+ crypto assets in a singe interface.">
     <meta name="twitter:image" content="https://atomicwallet.io/css/images/articles/tron_wink_wallet_twitter.png">
         <title>WINk-TRONbet (WIN) Airdrop</title>
-        <meta name="description" content="Read about WINk blockchain and receive WIN airdrop and manage 300+ coins and tokens in Atomic Wallet interface.">
+        <meta name="description" content="Get WINk airdrop in Atomic Wallet, learn more about TRONbet and manage 500+ crypto assets in a singe interface.">
     <link rel="stylesheet" href="css/main.css">
 <link rel="stylesheet" href="css/header.css">
 <link rel="stylesheet" href=" https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
