--- a/wink-tronbet-airdrop.html
+++ b/wink-tronbet-airdrop.html
@@ -183,7 +183,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </div>
 
 
-            <section class="container download-container relative">
+            <section class="container relative">
                 <!-- Subscribe Pop-up-->
             <script>window.jQuery || document.write('<scr' + 'ipt src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"><\/sc' + 'ript>')</script>
             <script>window.$kol_jquery = window.jQuery</script>
@@ -328,7 +328,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 </section>
 
-   <div class="item-page-container">
+   <div class="">
                 <div class="item-page">
 
   
