--- a/dogecoin-price-prediction.html
+++ b/dogecoin-price-prediction.html
@@ -105,6 +105,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 <div class="item-page-container">
+<div><a href="https://changenow.io/?link_id=d9466567d77e23">
+    <div class="banner-container"><div class="banner-button">Exchange now</div>
+    <img class="banner-image" src="css/images/articles/exchange_doge.png">
+    </div>
+    </a>
+</div>
     
     <div class="item-page">
         
@@ -121,6 +127,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                        <div class="widget-cc mobile-hide">
        <div style="height:510px; background-color: #FFFFFF; overflow:hidden; box-sizing: border-box; border: 1px solid #56667F; border-radius: 4px; text-align: right; line-height:14px; font-size: 12px; box-sizing:content-box; font-feature-settings: normal; text-size-adjust: 100%; box-shadow: inset 0 -20px 0 0 #56667F;padding:1px;padding: 0px; margin: 0px;"><div style="height:540px;padding:0px;margin:0px;"><iframe id="widget" src="https://widget.coinlib.io/widget?type=chart&theme=light&coin_id=280&pref_coin_id=1505" width="100%" height="536" scrolling="auto" marginwidth="0" marginheight="0" frameborder="0" border="0" style="border:0;margin:0;padding:0;line-height:14px;box-sizing:content-box;"></iframe></div></div>
 </div><cite class="mobile-hide">Dogecoin (DOGE) Price Chart</cite>
+<h2>Exchange DOGE</h2>
+               <div class="item-page-image-template">
+                <div class="item-page-blog-image">
+                  <a href="https://changenow.io/?link_id=d9466567d77e23" target="_blank" rel="nofollow">
+                    <img src="css/images/articles/exchange_doge.png" alt="" class="exchange-banner" style="">
+                    </a>
+                    </div>
+                </div>
 <h2>Contents:</h2>
 <ul>
 	<li><a href="#dogecoin">What is Dogecoin?</a></li>
