--- a/ethereum-price-prediction.html
+++ b/ethereum-price-prediction.html
@@ -105,7 +105,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
            
 
 <div class="item-page-container">
-<div><a href="https://changenow.io/?link_id=d9466567d77e23">
+<div><a href="https://changenow.io/?link_id=d9466567d77e23" target="_blank">
     <div class="banner-container"><div class="banner-button">Exchange now</div>
     <img class="banner-image" src="css/images/articles/exchange_eth.png">
     </div>
