--- a/tron-price-prediction.html
+++ b/tron-price-prediction.html
@@ -103,7 +103,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         
     </div>
 <div class="item-page-container">
-<div><a href="https://changenow.io/?link_id=d9466567d77e23">
+<div><a href="https://changenow.io/?link_id=d9466567d77e23" target="_blank">
     <div class="banner-container"><div class="banner-button">Exchange now</div>
     <img class="banner-image" src="css/images/articles/exchange_trx.png">
     </div>
