Staking Coins upd + fixes

--- a/loopring-ama.html
+++ b/loopring-ama.html
@@ -13,7 +13,7 @@
     <title>AMA with Loopring (LRC) | Atomic Wallet</title>
     <meta name="description" content="In the beginning of the month, on Friday 2nd August, we had an AMA session with Loopring Protocol, software for building decentralized exchanges in our in our Telegram Chat...">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="test/css/media-test-blog.css">
+    <link rel="stylesheet" href="css/test-media.css">
     <link rel="stylesheet" href="test/css/item-page.css">
     <link rel="stylesheet" href="css/atomic_font/atomicwallet.css">
    <link rel="stylesheet" href=" https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
