--- a/staking-coins.html
+++ b/staking-coins.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="twitter:card" content="summary_large_image">
+      <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@atomicwallet">
     <meta name="twitter:creator" content="@atomicwallet">
-    <meta name="twitter:title" content="What are Smart Contracts? | Atomic Wallet Guide">
-    <meta name="twitter:description" content="Decentralized Exchange (DEX) is a new type of the cryptocurrency exchange, in which traders own their private keys and get control on their funds. This solves a problem such as the fact that centralized exchanges store private keys in their bases.">
-    <meta name="twitter:image" content="https://atomicwallet.io/css/images/articles/binance-decentralized-exchange-twitter.png">
+    <meta name="twitter:title" content="What is Coin Staking? | Atomic Wallet Guide">
+    <meta name="twitter:description" content="Atomic Wallet allows you to interact with different blockchains in a secure and decentralized way. You will be able to stake your holding and receive passive income.">
+    <meta name="twitter:image" content="https://atomicwallet.io/css/images/articles/staking-coins.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Decentralized Exchange (DEX) is a new type of the cryptocurrency exchange, in which traders own their private keys and get control on their funds. This solves a problem such as the fact that centralized exchanges store private keys in their bases."/>
+    <meta name="description" content="Atomic Wallet allows you to interact with different blockchains in a secure and decentralized way. You will be able to stake your holding and receive passive income."/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title>What is Binance DEX and how it works?  | Learn about Binance Chain and BNB MainNet </title>
+    <title>What is Staking? | Coin Staking | Atomic Wallet</title>
     <link rel="stylesheet" href="css/main.css">
 <link rel="stylesheet" href="css/header.css">
 <link rel="stylesheet" href=" https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -106,31 +106,33 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <h1 style="text-align: center;">What is Staking coins?</h1>
       <div class="item-page-image-template">
                 <div class="item-page-blog-image">
-                    <img src="css/images/articles/staking-coins.png" alt="What is Binance DEX?" class="hvr-grow">
+                    <img src="css/images/articles/staking-coins.png" alt="What is Binance DEX?" >
                   </div>
                 </div>
-    <p>In order to get tranasctions validated they should be approved and added to a block by miners in Proof-of-work blockchains like Bitcoin, or get approved by validators in a Proof-of-Stake blockchains.  Proof-of-Stake (PoS) is a consensus algorithm where you can stake your coins and receive rewards for tranasction validation or receive devidends for holding funds.</p>
+     <p>Staking is a process of receiving profit for owning and holding cryptocurrency, validating transactions or setting up a node. </p>
+    <p>To get transactions validated they should be approved and added to a block by miners in Proof-of-work blockchains, like Bitcoin, or get approved by validators in Proof-of-Stake blockchains.  Proof-of-Stake (PoS) is a consensus algorithm, where you can stake your coins and receive rewards for transaction validation or receive dividends for holding funds.</p>
     <p>Atomic Wallet allows you to interact with different blockchains in a secure and decentralized way. You will be able to stake your holding and receive passive income using Atomic Wallet.</p>
     <h3>How to stake coins?</h3>
-    <ul>
-      <li>Hold funds</li>
-      <li>Use <a href="#download">Atomic Wallet</a></li>
+    <ol>
+      <li>Hold crypto in <a href="#download">Atomic Wallet</a></li>
       <li>Receive your income</li>
-    </ul>
+    </ol>
 
       <div class="item-page-image-template">
                 <div class="item-page-blog-image">
-                    <img src="css/images/mainnotebook.png" alt="What is Binance DEX?" class="hvr-grow">
+                    <img src="css/images/mainnotebook.png" alt="" >
                   </div>
                 </div>
-<p>After you install the Atomic Wallet you will need to transfer your coins to a staking address. As with most cryptocurrency wallets, it will be your obligation to keep secure your private key to the wallet because if you lose it you will lose access to your wallets and funds in it forever.</p>
-<p>The reward will be generated some time after you stake your coins on a sheduled basis. Thereupon, you can spend your rewards on a built-in cryptocurrency exchange or convert it into a fiat currency or a different cryptocurrency.</p>
+<p>After you install the Atomic Wallet, you will need to transfer your coins to a staking address. Just as most cryptocurrency wallets, it will be your obligation to keep secure your private key to the wallet because if you lose it – you will not be able to access the wallet and your funds there forever.</p>
+<p>The reward will be generated in some time after you stake your coins on a scheduled basis. Then, you can spend your rewards on a built-in cryptocurrency exchange or convert it into a fiat currency or a different cryptocurrency.</p>
 </p>
+
+
       <div class="container-flex">
         <div class="block-lg-12">
           <div class="block-row block-wrap wallets">
             <h1 style="    text-align: center;
-    padding-bottom: 25px;">Stake coins with Atomic</h1>
+    padding-bottom: 25px;">Coins with staking features</h1>
             <div class="div-items">
             <a class="block-lg-3 wallet">
               <img src="css/images/crypto-icon/XTZ.svg" alt="" width="100%">
