--- a/thorchain-bepswap-ama.html
+++ b/thorchain-bepswap-ama.html
@@ -8,7 +8,7 @@
     <title>AMA with Thorchain | Atomic Wallet</title>
     <meta name="description" content="Light multi-assets wallet with built-in atomic swap exchange">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="test/css/media-test-blog.css">
+    <link rel="stylesheet" href="css/test-media.css">
     <link rel="stylesheet" href="test/css/item-page.css">
     <link rel="stylesheet" href="css/atomic_font/atomicwallet.css">
    <link rel="stylesheet" href=" https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
