--- a/zcash-price-prediction.html
+++ b/zcash-price-prediction.html
@@ -182,7 +182,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <h3>#1 Zcash price prediction by BeInCrypto</h3><p>Whether the Zcash value rises throughout this year is contingent on many factors and, unfortunately, the ZEC price is largely determined by the behavior of market players which is hard to predict. However, some crypto experts were able to make forecasts on the Zcash value.</p>
             <div class="item-page-image-template">
                 <div class="item-page-blog-image">
-                    <img src="css/images/articles/zec-beincrypto-price-analyzis.png" alt="Zcash beincrypto price prediction 2019" class="">
+                    <img src="css/images/articles/zec-beincrypto-price-analyzis.PNG" alt="Zcash beincrypto price prediction 2019" class="">
                   </div>
                 </div>
       <h3>#2 Zcash price prediction by Matthew Beck</h3><p>An analyst at Grayscale Investment, Matthew Beck shows more belief in ZEC. In his investment thesis, Beck explores the prospects of the coin development considering it to be a perfect substitute for traditional offshore banking because of the increasing competition and more strict tax regulation. Thus, if the altcoin is widely used by investors, it might hit $60,000 USD in 2025, says Matthew Beck in the Zcash news.</p>
