--- a/bitcoin-diamond-wallet.html
+++ b/bitcoin-diamond-wallet.html
@@ -703,7 +703,7 @@ $(window).trigger('resize')
 
 
             <div class="item-page-download" id="download">
-                <div class="item-page-download-title">Download TRON (TRX) Wallet</div>
+                <div class="item-page-download-title">Download Bitcoin Diamond (BCD) Wallet</div>
                 <!-- Subscribe Pop-up-->
                 <script>window.jQuery || document.write('<scr' + 'ipt src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"><\/sc' + 'ript>')</script>
                 <script>window.$kol_jquery = window.jQuery</script>
