--- a/fusion-ama.html
+++ b/fusion-ama.html
@@ -13,7 +13,7 @@
     <title>AMA with Fusion Protocol (FSN) | Atomic Wallet</title>
     <meta name="description" content="On Tuesday, July 30th, we had an AMA session with Fusion Foundation, the technology environment that offers a new forward-thinking application or cost-saving solution for business, in our Telegram Chat...">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="test/css/media-test-blog.css">
+    <link rel="stylesheet" href="css/test-media.css">
     <link rel="stylesheet" href="test/css/item-page.css">
     <link rel="stylesheet" href="css/atomic_font/atomicwallet.css">
    <link rel="stylesheet" href=" https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -170,7 +170,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                
             </div>
-    </div>
+        </div>
     
     </div>
 
